src/objects/sfsp__SalesNodeUser__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Users</relationshipLabel>
        <relationshipName>SalesNodeUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Sales Node Users</relationshipLabel>
        <relationshipName>SalesNodeUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Node User</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Node Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>